<resources>
<string name="spellchecker_likely_threshold_value">0.11</string>
<string name="spellchecker_recommended_threshold_value">0.11</string>
<string name="spellchecker_suggestion_threshold_value">0.03</string>
<string name="more_keys_for_q">1</string>
<string name="more_keys_for_w">2</string>
<string name="more_keys_for_e">3</string>
<string name="more_keys_for_r">4</string>
<string name="more_keys_for_t">5</string>
<string name="more_keys_for_y">6</string>
<string name="more_keys_for_u">7</string>
<string name="more_keys_for_i">8</string>
<string name="more_keys_for_o">9</string>
<string name="more_keys_for_p">0</string>
<string name="more_keys_for_a">!</string>
<string name="more_keys_for_s">\@</string>
<string name="more_keys_for_d">\#</string>
<string name="more_keys_for_f">^</string>
<string name="more_keys_for_g">*</string>
<string name="more_keys_for_h">_</string>
<string name="more_keys_for_j">(</string>
<string name="more_keys_for_k">)</string>
<string name="more_keys_for_l">￦</string>
<string name="more_keys_for_z">\?</string>
<string name="more_keys_for_x">~</string>
<string name="more_keys_for_c">/</string>
<string name="more_keys_for_v">,</string>
<string name="more_keys_for_b">-</string>
<string name="more_keys_for_n">:</string>
<string name="more_keys_for_m">;</string>
<string name="more_keys_minus">-</string>
<string name="more_keys_for_currency_dollar">¢,£,€,¥,₱</string>
<string name="more_keys_for_currency_euro">¢,£,$,¥,₱</string>
<string name="more_keys_for_currency_pound">¢,$,€,¥,₱</string>
<string name="more_keys_for_currency_general">¢,$,€,£,¥,₱</string>
<string name="keylabel_for_comma">,</string>
<string name="more_keys_for_f1" />
<string name="more_keys_for_f1_settings">@integer/key_settings</string>
<string name="more_keys_for_f1_navigate">\@icon/7|@integer/key_tab</string>
<string name="more_keys_for_q2">\"</string>
<string name="more_keys_for_w2">"'"</string>
<string name="more_keys_for_e2">&amp;</string>
<string name="more_keys_for_r2">+</string>
<string name="more_keys_for_t2">×</string>
<string name="more_keys_for_y2">÷</string>
<string name="more_keys_for_u2">=</string>
<string name="more_keys_for_i2">&lt;</string>
<string name="more_keys_for_o2">></string>
<string name="more_keys_for_p2">%</string>
<string name="suggested_punctuations">",~,^,!,?,@,.,,,:,;,\",(,),',-,/,_"</string>
<string name="weak_space_swapping_symbols">.,;:!?)]}\"</string>
<string name="weak_space_stripping_symbols">"\u0009 
/_'-"</string>
<string name="phantom_space_promoting_symbols">([*&amp;@{&lt;>+=|</string>
<string name="magic_space_swapping_symbols">.,;:!?)]}\"</string>
<string name="magic_space_stripping_symbols">"\u0009 
/_'-"</string>
<string name="magic_space_promoting_symbols">([*&amp;@{&lt;>+=|</string>
<string name="symbols_excluded_from_word_separators">"'-"</string>
<string name="layout_switch_back_symbols" />
<string name="label_to_phone_numeric_key">123</string>
<string name="label_to_phone_symbols_key">＊＃</string>
<string name="auto_correction_threshold_mode_index_off">0</string>
<string name="auto_correction_threshold_mode_index_modest">1</string>
<string name="auto_correction_threshold_mode_index_aggeressive">2</string>
<string name="auto_correction_threshold_mode_index_very_aggeressive">3</string>
<string name="english_ime_debug_settings">Android keyboard Debug settings</string>
<string name="subtype_generic">%s</string>
<string name="dictionary_pack_package_name">com.google.android.inputmethod.latin.dictionarypack</string>
<string name="settings_ms">ms</string>
<string name="keyboard_type_normal">0</string>
<string name="keyboard_type_smart">1</string>
<string name="keyboard_type_qwerty">2</string>
<string name="keyboard_type_samsung">3</string>
<string name="keyboard_type_lg">4</string>
<string name="keyboard_type_sky_qwerty">5</string>
<string name="theme_0">0</string>
<string name="theme_1">1</string>
<string name="theme_2">2</string>
<string name="theme_3">3</string>
<string name="more_type_email">email</string>
<string name="more_type_url">url</string>
<string name="more_period">period</string>
<string name="more_settings">settings</string>
<string name="more_settings_settings">settings</string>
<string name="more_settings_voice">voice</string>
<string name="more_settings_hanja">hanja</string>
<string name="more_settings_inputmethod">inputmethod</string>
<string name="more_settings_clipboard">clipboard</string>
<string name="more_settings_size">size</string>
<string name="more_settings_close">close</string>
<string name="config_key_repeat_interval">50</string>
<string name="config_multitap_timeout">2000</string>
<string name="default_custom_popup">♥★☞→●■▷▶♣♠>·</string>
<string name="height_0">0</string>
<string name="height_1">1</string>
<string name="MoreKeyboardKeyStyle">MoreKeyboardKeyStyle</string>
<string name="sound_0">0</string>
<string name="sound_1">1</string>
<string name="sound_2">2</string>
<string name="sound_3">3</string>
<string name="sound_4">4</string>
<string name="label_switch_emoticon">^_^</string>
<string name="label_switch_numsym">★</string>
<string name="label_dotcom">.com</string>
<string name="label_atmark">\@</string>
<string name="symbols_word_separators">"\u0009 
()[]{}*&amp;&lt;>+=|.,;:!?/_\""</string>
<string name="ime_name">SKY keyboard</string>
<string name="skyime_settings">SKY keyboard settings</string>
<string name="english_ime_input_options">Input options</string>
<string name="spell_checker_service_name">Android correction</string>
<string name="android_spell_checker_settings">Spell checking settings</string>
<string name="use_proximity_option_title">Use proximity data</string>
<string name="use_proximity_option_summary">Use a keyboard-like proximity algorithm for spell checking</string>
<string name="correction_category">Word suggestion settings</string>
<string name="misc_category">Other options</string>
<string name="advanced_settings">Advanced settings</string>
<string name="advanced_settings_summary">Options for expert users</string>
<string name="use_contacts_dict">Suggest Contact names</string>
<string name="use_contacts_dict_summary">Use names from Contacts for suggestions and corrections</string>
<string name="enable_span_insert">Enable recorrections</string>
<string name="enable_span_insert_summary">Set suggestions for recorrections</string>
<string name="auto_cap">Auto-capitalization</string>
<string name="prefs_show_suggestions">Show suggestions</string>
<string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
<string name="prefs_settings_key">Show settings key</string>
<string name="auto_correction">Auto-Complete</string>
<string name="auto_correction_summary">Spacebar and punctuation automatically insert highlighted word</string>
<string name="auto_correction_threshold_mode_off">Off</string>
<string name="auto_correction_threshold_mode_modest">Modest</string>
<string name="auto_correction_threshold_mode_aggeressive">Aggressive</string>
<string name="auto_correction_threshold_mode_very_aggeressive">Very aggressive</string>
<string name="bigram_suggestion">Bigram suggestions</string>
<string name="bigram_suggestion_summary">Use previous word to improve suggestion</string>
<string name="bigram_prediction">Next word prediction</string>
<string name="bigram_prediction_summary">Use previous word also for prediction</string>
<string name="added_word">%s : Saved</string>
<string name="spoken_use_headphones">Plug in a headset to hear password keys spoken aloud.</string>
<string name="spoken_current_text_is">Current text is %s</string>
<string name="spoken_no_text_entered">No text entered</string>
<string name="spoken_description_unknown">Key code %d</string>
<string name="spoken_description_shift">Shift</string>
<string name="spoken_description_shift_shifted">Shift enabled</string>
<string name="spoken_description_caps_lock">Caps lock enabled</string>
<string name="spoken_description_delete">Delete</string>
<string name="spoken_description_to_symbol">Symbols</string>
<string name="spoken_description_to_alpha">Letters</string>
<string name="spoken_description_settings">Settings</string>
<string name="spoken_description_tab">Tab</string>
<string name="spoken_description_space">Space</string>
<string name="spoken_description_mic">Voice input</string>
<string name="spoken_description_smiley">Smiley face</string>
<string name="spoken_description_return">Return</string>
<string name="spoken_description_comma">Comma</string>
<string name="spoken_description_period">Period</string>
<string name="spoken_description_left_parenthesis">Left parenthesis</string>
<string name="spoken_description_right_parenthesis">Right parenthesis</string>
<string name="spoken_description_colon">Colon</string>
<string name="spoken_description_semicolon">Semicolon</string>
<string name="spoken_description_exclamation_mark">Exclamation mark</string>
<string name="spoken_description_question_mark">Question mark</string>
<string name="spoken_description_double_quote">Double quote</string>
<string name="spoken_description_single_quote">Single quote</string>
<string name="prefs_usability_study_mode">Usability study mode</string>
<string name="ime_settings_kbd">General settings</string>
<string name="kor_keyboard_type">Korean</string>
<string name="eng_keyboard_type">English</string>
<string name="portrait_keyboard_category">Portrait keyboard settings</string>
<string name="theme_type">Keyboard style</string>
<string name="prefs_qwerty_long_input">Show number, symbol on Korean, English key</string>
<string name="prefs_qwerty_long_input_summary">Input number, symbol by long press</string>
<string name="prefs_double_spaces_turn_into_period">"Quick '.'"</string>
<string name="prefs_double_spaces_turn_into_period_summary">Double tapping the space bar inserts a period</string>
<string name="custom_popup_key">Symbol</string>
<string name="prefs_default_qwerty_doubletap_summary">"Double tapping 'ㅂ,ㅈ,ㄷ,ㄱ,ㅅ,ㅐ,ㅔ' on basic qwerty"</string>
<string name="prefs_default_qwerty_doubletap">"Quick 'ㅃ,ㅉ,ㄸ,ㄲ,ㅆ,ㅒ,ㅖ'"</string>
<string name="vibrate_on_keypress">Keyboard Vib.</string>
<string name="popup_on_keypress">Show feedback for tapping qwerty</string>
<string name="keypress_setting_key">Key detail</string>
<string name="sound_type">Sound on keyboard touch</string>
<string name="style_reset_dialog_message_1">Below options will be reset.</string>
<string name="style_reset_dialog_message_2">- All transparencies on current style</string>
<string name="style_reset_dialog_message_3">- Registered background image</string>
<string name="preview_1">1</string>
<string name="preview_2">2</string>
<string name="preview_3">3</string>
<string name="preview_4">4</string>
<string name="preview_5">5</string>
<string name="preview_6">6</string>
<string name="preview_7">7</string>
<string name="preview_8">8</string>
<string name="preview_9">9</string>
<string name="preview_0">0</string>
<string name="preview_normal_1">ㄱㅋ</string>
<string name="preview_normal_2">ㅣㅡ</string>
<string name="preview_normal_3">ㅏㅑ</string>
<string name="preview_normal_4">ㄷㅌ</string>
<string name="preview_normal_5">ㄴㄹ</string>
<string name="preview_normal_6">ㅓㅕ</string>
<string name="preview_normal_7">ㅁㅅ</string>
<string name="preview_normal_8">ㅂㅍ</string>
<string name="preview_normal_9">ㅗㅛ</string>
<string name="preview_normal_10">ㅈㅊ</string>
<string name="preview_normal_11">ㅇㅎ</string>
<string name="preview_normal_12">ㅜㅠ</string>
<string name="preview_function_1">~</string>
<string name="preview_function_2">^</string>
<string name="preview_function_3">-</string>
<string name="preview_function_4">;</string>
<string name="preview_function_5">!</string>
<string name="preview_function_6">\?</string>
<string name="preview_function_7">★</string>
<string name="preview_function_8">영</string>
<string name="preview_function_9">.</string>
<string name="preview_function_10">완료</string>
<string name="keyboard_height_control">Keyboard height</string>
</resources>