<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:customstyle="http://schemas.android.com/apk/res-auto" android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/preview_layout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/preview__container_height">
	<LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_num_1" android:layout_width="@dimen/number_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_1" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_num_2" android:layout_width="@dimen/number_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_2" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_num_3" android:layout_width="@dimen/number_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_3" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_num_4" android:layout_width="@dimen/number_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_4" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_num_5" android:layout_width="@dimen/number_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_5" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_num_6" android:layout_width="@dimen/number_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_6" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_num_7" android:layout_width="@dimen/number_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_7" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_num_8" android:layout_width="@dimen/number_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_8" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_num_9" android:layout_width="@dimen/number_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_9" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_num_10" android:layout_width="@dimen/number_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_0" />
	</LinearLayout>
	<LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_normal_1" android:layout_width="@dimen/normal_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_normal_1" customstyle:hintText="@string/more_keys_for_w2" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_normal_2" android:layout_width="@dimen/normal_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_normal_2" customstyle:hintText="@string/more_keys_for_q2" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_normal_3" android:layout_width="@dimen/normal_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_normal_3" customstyle:hintText="@string/more_keys_for_g" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_function_1" android:layout_width="@dimen/function_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_function_1" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_function_2" android:layout_width="@dimen/function_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_function_2" />
	</LinearLayout>
	<LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_normal_4" android:layout_width="@dimen/normal_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_normal_4" customstyle:hintText="@string/more_keys_for_d" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_normal_5" android:layout_width="@dimen/normal_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_normal_5" customstyle:hintText="@string/more_keys_for_e2" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_normal_6" android:layout_width="@dimen/normal_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_normal_6" customstyle:hintText="@string/more_keys_for_n" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_function_3" android:layout_width="@dimen/function_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_function_3" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_function_4" android:layout_width="@dimen/function_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_function_4" />
	</LinearLayout>
	<LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_normal_7" android:layout_width="@dimen/normal_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_normal_7" customstyle:hintText="@string/more_keys_for_t2" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_normal_8" android:layout_width="@dimen/normal_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_normal_8" customstyle:hintText="@string/more_keys_for_r2" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_normal_9" android:layout_width="@dimen/normal_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_normal_9" customstyle:hintText="@string/more_keys_for_c" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_function_5" android:layout_width="@dimen/function_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_function_5" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_function_6" android:layout_width="@dimen/function_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_function_6" />
	</LinearLayout>
	<LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_normal_10" android:layout_width="@dimen/normal_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_normal_10" customstyle:hintText="@string/more_keys_for_b" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_normal_11" android:layout_width="@dimen/normal_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_normal_11" customstyle:hintText="@string/more_keys_for_u2" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_normal_12" android:layout_width="@dimen/normal_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_normal_12" customstyle:hintText="@string/more_keys_for_r2" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_function_7" android:layout_width="@dimen/backspace_width" android:layout_height="@dimen/preview_height" />
	</LinearLayout>
	<LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_function_8" android:layout_width="@dimen/function_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_function_7" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_function_9" android:layout_width="@dimen/function_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_function_8" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_function_10" android:layout_width="@dimen/space_width" android:layout_height="@dimen/preview_height" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_function_11" android:layout_width="@dimen/function_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_function_9" />
		<com.pantech.inputmethod.style.PreviewButton android:textSize="@dimen/preview__text_size" android:id="@id/key_function_12" android:layout_width="@dimen/return_width" android:layout_height="@dimen/preview_height" android:text="@string/preview_function_10" />
	</LinearLayout>
</LinearLayout>
