<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@id/layout_root" android:paddingTop="17.0dip" android:paddingBottom="17.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
	<TextView android:textSize="17.0sp" android:textColor="@color/black" android:id="@id/dialogText" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/style_reset_dialog_message_1" android:lineSpacingExtra="10.0dip" android:paddingStart="24.0dip" android:paddingEnd="24.0dip" />
	<TextView android:textSize="17.0sp" android:textColor="@color/black" android:id="@id/dialogText1" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/style_reset_dialog_message_2" android:lineSpacingExtra="10.0dip" android:paddingStart="24.0dip" android:paddingEnd="24.0dip" />
	<TextView android:textSize="17.0sp" android:textColor="@color/black" android:id="@id/dialogText2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/style_reset_dialog_message_3" android:lineSpacingExtra="10.0dip" android:paddingStart="24.0dip" android:paddingEnd="24.0dip" />
</LinearLayout>
